--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>Welcome to Technical Forums</title>
+  <title>Welcome to RGPV Student Forums</title>
   
   <script src="https://use.fontawesome.com/0d093bf583.js"></script>
 </head>
